# cachi2

./: .containerignore  .coveragerc  .gitignore  CONTRIBUTING.md  Containerfile  Dockerfile  Makefile  README.md  SECURITY.md  codecov.yaml  noxfile.py  pyproject.toml  requirements-extras.txt  requirements-test.in  requirements-test.txt  requirements.txt  rpms.lock.yaml  runtime.txt  tox.ini
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: codeql.yaml  dependabot-pipcompile.yml  dependabot-pydantic.yml  gating.yaml  multi-arch-build.yaml
.tekton/: acmiel-evil-test.yaml  pull-request.yaml  push.yaml  release.yaml  tag-latest.yaml  test-notifications.yaml  test-rhtap.yaml  test.yaml
cachi2/_compat/: checksum.py  common_utils.py  general.py  paths.py  requests.py  scm.py  worker_utils.py
cachi2/core/: checksum.py  config.py  errors.py  http_requests.py  packages_data.py  resolver.py  rooted_path.py  safepath.py  scm.py  utils.py
cachi2/core/extras/: envfile.py
cachi2/core/models/: input.py  output.py  property_semantics.py  sbom.py  validators.py
cachi2/core/package_managers/: cargo.py  general.py  generic.py  gomod.py  metayarn.py  npm.py  pip.py  rubygems.py  utils.py  yarn.py
cachi2/core/package_managers/bundler/: __init__.py  main.py  parser.py
cachi2/core/package_managers/cargo/: __init__.py  main.py
cachi2/core/package_managers/generic/: __init__.py  main.py  models.py
cachi2/core/package_managers/gomod/: __init__.py  parser.py  resolver.py  version.py
cachi2/core/package_managers/rpm/: __init__.py  base.py  main.py  redhat.py
cachi2/core/package_managers/rubygems/: __init__.py  main.py  parser.py
cachi2/core/package_managers/yarn/: __init__.py  locators.py  main.py  project.py  resolver.py  utils.py
cachi2/core/package_managers/yarn_classic/: __init__.py  main.py  project.py  resolver.py  utils.py  workspaces.py
cachi2/interface/: cli.py
docs/: bundler.md  cargo.md  dependency_confusion.md  generic.md  gomod.md  logs.md  metadata.md  npm.md  pip.md  pull_request_template.md  usage.md  using_requests_locally.md  writing_integration_tests.md  yarn.md  yarn_classic.md
docs/adr/: 0001-add-generic-fetcher.md  0002-yarn-v4.md
docs/design/: bundler.md  cargo-support.md  generic-enhanced-purls.md  generic.md  generic_fetcher.md  maven.md  pnc.md  rubygems.md  yarn-v1.md
docs/designs/: 0000-template.md  0001-golang-1-21.md  0002-rubygems-initial-design.md  cargo-support.md  ruby_test_plan_002.md  rubygems-001.md  template-000.md
docs/hacking/: coding_best_practices.md
hack/: test_gomod.sh  test_pip.sh
hack/mock-unittest-data/: gomod.sh  yarn.py  yarn.sh
js-deps/: package-lock.json  package.json
playground/python-and-rust/: case-study-quipucords.ipynb
source/: rpms.lock.yaml
test-repo/: README.md  package-lock.json  package.json
test-repo/foo/: package.json
tests/: __init__.py
tests/common_utils/: __init__.py
tests/dnfserver/: README.md  nginx.conf  start.sh
tests/dnfserver/certificates/: CA.crt  CA.key  client.crt  client.key  generate-certs.sh  server.crt  server.key
tests/dnfserver/container/: Dockerfile  mtls.sh  nginx.conf  setup-dnfrepo.sh  setup.sh  test.sh
tests/integration/: conftest.py  test_bundler.py  test_cargo.py  test_generic.py  test_gomod.py  test_npm.py  test_package_managers.py  test_pip.py  test_rpm.py  test_yarn.py  test_yarn_classic.py  utils.py
tests/integration/test_data/bundler_everything_present/: .build-config.yaml  bom.json  fetch_deps_sha256sums.json
tests/integration/test_data/bundler_everything_present_except_gemspec/: .build-config.yaml  bom.json  fetch_deps_sha256sums.json
tests/integration/test_data/cargo_mixed_dep/: .build-config.yaml  bom.json
tests/integration/test_data/generic_e2e/: bom.json  fetch_deps_sha256sums.json
tests/integration/test_data/generic_maven_e2e/: bom.json  fetch_deps_sha256sums.json
tests/integration/test_data/gomod_1.18_e2e_test/: bom.json
tests/integration/test_data/gomod_1.20_e2e_dirty_go.mod/: .build-config.yaml  bom.json  fetch_deps_sha256sums.json
tests/integration/test_data/gomod_1.21_e2e_test/: bom.json  fetch_deps_sha256sums.json
tests/integration/test_data/gomod_1.22_e2e_workspace_vendoring/: .build-config.yaml  bom.json  fetch_deps_sha256sums.json  vendor_sha256sums.json
tests/integration/test_data/gomod_e2e_multiple_modules/: bom.json  fetch_deps_file_contents.yaml  fetch_deps_sha256sums.json  output.json
tests/integration/test_data/gomod_e2e_test/: bom.json  fetch_deps_sha256sums.json  output.json
tests/integration/test_data/gomod_go_generate_imported/: bom.json  output.json
tests/integration/test_data/gomod_local_deps/: bom.json  output.json
tests/integration/test_data/gomod_multiple_modules_missing_checksums/: bom.json  fetch_deps_sha256sums.json
tests/integration/test_data/gomod_vendor_check_correct_vendor/: bom.json  output.json  vendor_sha256sums.json
tests/integration/test_data/gomod_vendor_check_no_vendor/: bom.json  output.json  vendor_sha256sums.json
tests/integration/test_data/gomod_vendored_with_flag/: .build-config.json  .build-config.yaml  bom.json  output.json  vendor_sha256sums.json
tests/integration/test_data/gomod_with_deps/: .build-config.json  .build-config.yaml  bom.json  fetch_deps_sha256sums.json  output.json
tests/integration/test_data/gomod_without_deps/: bom.json  (+1 more)
tests/pypiserver/: package-urls.txt  start.sh
tests/unit/: conftest.py  test_checksum.py  test_cli.py  test_errors.py  test_merge_spdx.py  test_merge_syft_sbom.py  test_resolver.py  test_rooted_path.py  test_safepath.py  test_scm.py  test_utils.py
tests/unit/data/: alpine.pretty.json  something.more.simple.0.100.0.spdx.pretty.json  something.simple0.100.0.spdx.pretty.json
tests/unit/extras/: test_envfile.py
tests/unit/models/: test_input.py  test_output.py  test_property_semantics.py  test_sbom.py  test_validators.py
tests/unit/package_managers/: conftest.py  test_general.py  test_generic.py  test_gomod.py  test_metayarn.py  test_npm.py  test_pip.py  test_rpm.py
utils/: merge_syft_sbom.py
(+163 files in other folders)
