[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
name = "cachi2"
license = { text = "GPLv3+" }
requires-python = ">=3.9"
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]
dependencies = [
  "aiohttp",
  "aiohttp-retry",
  "backoff",
  "beautifulsoup4",
  "gitpython",
  "packageurl-python",
  "packaging",
  "pyarn",
  "pydantic",
  "pypi-simple",
  "pyarn",
  "pyyaml",
  "requests",
  "semver",
  "tomlkit",
  "typer",
  "createrepo-c",
  "packageurl-python"
]
[project.optional-dependencies]
dev = [
  "bandit",
  "black",
  "click",
  "flake8",
  "flake8-docstrings",
  "flake8-pyproject",
  "isort[colors]",
  "mypy",
  "nox",
  "typing-extensions",
]
test = [
  "jsonschema",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-env",
  "pyyaml",
]
[project.scripts]
cachi2 = "cachi2.interface.cli:app"

[tool.setuptools]
packages = ["cachi2"]

[tool.setuptools_scm]
version_scheme = "post-release"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true

# TODO: pyarn does not currently have type annotations
[[tool.mypy.overrides]]
module = "pyarn.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nox.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "noxfile"
disallow_untyped_decorators = false

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 90
exclude_lines = [
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "return NotImplemented",
]

[tool.bandit]
skips = [
  "B404", # import subprocess
  "B603", # subprocess_without_shell_equals_true
]

[tool.pytest.ini_options]
log_cli_level = "DEBUG"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"

[tool.flake8]
show_source = true
ignore = [
  "D100", # missing docstring in public module
  "D104", # missing docstring in public package
  "D105", # missing docstring in magic method
  "W503", # line break before binary operator
  "E203", # whitespace before ':'
  "E501", # line too long
]
per-file-ignores = [
  "tests/*:D101,D102,D103", # missing docstring in public class, method, function
]
